My current changes

--- a/pointgrey_camera_driver/cfg/PointGrey.cfg
+++ b/pointgrey_camera_driver/cfg/PointGrey.cfg
@@ -114,6 +114,10 @@ gen.add("white_balance_blue", int_t,    SensorLevels.RECONFIGURE_RUNNING,     "W
 
 gen.add("white_balance_red",  int_t,    SensorLevels.RECONFIGURE_RUNNING,     "White balance red component.",				             		             550, 0, 1023)
 
+gen.add("high_speed_mode", bool_t, SensorLevels.RECONFIGURE_STOP,      "High Speed mode",                                                       True)
+
+gen.add("number_of_buffers", int_t, SensorLevels.RECONFIGURE_STOP,         "Number of buffers, default is 10",                 10, 0, 1000)
+
 # Format7-specific parameters
 gen.add("format7_roi_width", int_t, SensorLevels.RECONFIGURE_STOP,         "Width of Format7 Region of Interest in unbinned pixels, full width if zero.",                 0, 0, 65535)
 
